# CH4Net

./: .gitignore  CLAUDE.md  modal_train.py  pyproject.toml
src/: evaluate.py  export_onnx.py  fetch_methanes2cm.py  fetch_real_world_data.py  gen_eval_preds.py  infer_real_world.py  models.py  train.py
