[project]
name = "ch4net"
version = "0.1.0"
description = "U-Net for methane plume segmentation from Sentinel-2 imagery"
requires-python = ">=3.10"
dependencies = [
    "torch",
    "torchvision",
    "numpy",
    "scikit-learn",
    "tqdm",
    "matplotlib",
]

[dependency-groups]
dev = [
    "modal>=1.3.3",
]
